...
    var newsViewModel: NewsViewModel? //handles data fetching and business logic for the view controller.
    var articles: [Article]? //optional array that holds the fetched news articles.
    @IBOutlet weak var newsTableView: UITableView! //will display the list of news articles.
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "News screen"
        newsViewModel = NewsViewModel()
        newsViewModel?.fetchNews { [weak self] result in //Calls the fetchNews method on the view model to get news articles.
            switch result {
            case .success(let news):
                self?.articles = news.articles //fetched articles are assigned to the articles property
                self?.newsTableView.reloadData()
...
